Support Kotlin 1.8 (#113)
* Support Kotlin 1.8

* Release 3.8-SNAPSHOT version #112

* Release 3.8

* Update changelog

* Update readme.md

---------

Co-authored-by: Sergej Shafarenka <sergej.shafarenka@halfbit.de>